--- a/blog/src/app/components/blog/blog.component.html
+++ b/blog/src/app/components/blog/blog.component.html
@@ -1,6 +1,6 @@
 <selectize></selectize>
 <div *ngFor="let item of items$ | filter:filterText">
-    <blog-item [id]="item.id" [image]="item.image" [text]="item.text" style="align-items: center; align-self: center;">
+    <blog-item [id]="item.id" [image]="item.url" [text]="item.content" style="align-items: center; align-self: center;">
 
     </blog-item>
 </div>
