--- a/blog/src/app/components/selectize/selectize.component.html
+++ b/blog/src/app/components/selectize/selectize.component.html
@@ -1,6 +1,6 @@
-<input #input type="text">
-
+<input #input type="text" placeholder="wyszukaj po tekscie" class="form-control">
 <ul>
-  <li *ngFor="let p of posts$">
-    <a href="#" [routerLink]="['/blog/detail/', p.id]"> {{ p.text }}</a></li>
+    <li *ngFor="let p of posts$">
+        <a href="#" [routerLink]="['/blog/detail/',p.id]" style="width: 50%;">{{p.text}}</a>
+    </li>
 </ul>
