--- a/blog/src/app/navbar/navbar.component.html
+++ b/blog/src/app/navbar/navbar.component.html
@@ -8,4 +8,5 @@
 <li class="nav-item">
     <a class="nav-link" routerLink='/contact' >Kontakt</a>
 </li>
+  <button (click)="logOut()" class="dropdown-item">Wyloguj</button>
 </ul>
